fixed stretching images

--- a/css/style.css
+++ b/css/style.css
@@ -238,6 +238,7 @@ li.move-right {
 	height: 50vh;
 	margin-top: 8vh;
 	background-color: rgb(199, 199, 199);
+	overflow-x: hidden;
 }
 
 .portrait-wrapper {
